completed a professional section

--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
             </div>
           </div>
           <!-- banner section start -->
-          <div class="container mx-auto mt-16 sm:px-4">
+          <div class="container mx-auto mt-16">
             <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full bg-cover" />
+                <img src="Images/1.png" class="w-full bg-cover bg-center" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full" />
+                <img src="Images/1.png" class="w-full bg-cover bg-center" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
                 <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full" />
+                <img src="Images/1.png" class="w-full bg-cover bg-center" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
                 <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-                <img src="Images/1.png" class="w-full" />
+                <img src="Images/1.png" class="w-full bg-cover bg-center" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
@@ -90,7 +90,53 @@
           </div>
     </header>
     <main>
-
+        <!-- professional section start-->
+        <section class="container mx-auto mt-16 lg:mt-32">
+            <div class="text-center space-y-4 lg:space-y-6">
+                <h1 class="text-[#131318] text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h1>
+                <p class="text-[#13131899] font-medium">Club hockey is a beloved sport that has grown in popularity among college students over the years.</p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-4 mt-10">
+                <div class="text-center mt-12">
+                    <div>
+                        <div class="radial-progress text-[#FF4240]" style="--value:87; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">87%</span></div>
+                        </div>
+                        <div>
+                            <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Prayer Facility</h1>
+                        <p class="#13131899">Our hockey programs are for all players, including goalies, forwards defensemen</p>
+                        </div>
+                       </div>
+                       <div class="text-center mt-12">
+                        <div>
+                            <div class="radial-progress text-[#49D293] " style="--value:95; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">95%</span></div>
+                            </div>
+                            <div>
+                                <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Experienced Coach</h1>
+                            <p class="#13131899">Roger grew up playing youth hockey in Massachusetts followed hockey.</p>
+                            </div>
+                           </div>
+                           <div class="text-center mt-12">
+                            <div>
+                                <div class="radial-progress text-[#FFB546]" style="--value:90; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">90%</span></div>
+                                </div>
+                                <div>
+                                    <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Senior Player</h1>
+                                <p class="#13131899">Senior hockey refers to amateur or semi-professional hockey competition. </p>
+                                </div>
+                               </div>
+                   <div class="text-center mt-12">
+                    <div>
+                        <div class="radial-progress text-[#4C8DF1] " style="--value:80; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">80%</span></div>
+                        </div>
+                        <div>
+                            <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Training Ground</h1>
+                        <p class="#13131899">The Burnsville Training Center is located across the parking from the Burnsville.</p>
+                        </div>
+                       </div>
+                   </div>
+                   
+            </div>
+        </section>
     </main>
     <footer>
 
