completed a program section

--- a/index.html
+++ b/index.html
@@ -99,42 +99,72 @@
             <div class="grid grid-cols-1 lg:grid-cols-4 mt-10">
                 <div class="text-center mt-12">
                     <div>
-                        <div class="radial-progress text-[#FF4240]" style="--value:87; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">87%</span></div>
+                        <div class="radial-progress text-[#FF4240] rotate-180" style="--value:87; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">87%</span></div>
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Prayer Facility</h1>
-                        <p class="#13131899">Our hockey programs are for all players, including goalies, forwards defensemen</p>
+                        <p class="text-[#13131899]">Our hockey programs are for all players, including goalies, forwards defensemen</p>
                         </div>
                        </div>
                        <div class="text-center mt-12">
                         <div>
-                            <div class="radial-progress text-[#49D293] " style="--value:95; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">95%</span></div>
+                            <div class="radial-progress text-[#49D293] rotate-180" style="--value:95; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">95%</span></div>
                             </div>
                             <div>
                                 <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Experienced Coach</h1>
-                            <p class="#13131899">Roger grew up playing youth hockey in Massachusetts followed hockey.</p>
+                            <p class="text-[#13131899]">Roger grew up playing youth hockey in Massachusetts followed hockey.</p>
                             </div>
                            </div>
                            <div class="text-center mt-12">
                             <div>
-                                <div class="radial-progress text-[#FFB546]" style="--value:90; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">90%</span></div>
+                                <div class="radial-progress text-[#FFB546] rotate-180" style="--value:90; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">90%</span></div>
                                 </div>
                                 <div>
                                     <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Senior Player</h1>
-                                <p class="#13131899">Senior hockey refers to amateur or semi-professional hockey competition. </p>
+                                <p class="text-[#13131899]">Senior hockey refers to amateur or semi-professional hockey competition. </p>
                                 </div>
                                </div>
                    <div class="text-center mt-12">
                     <div>
-                        <div class="radial-progress text-[#4C8DF1] " style="--value:80; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold">80%</span></div>
+                        <div class="radial-progress text-[#4C8DF1] rotate-180 " style="--value:80; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">80%</span></div>
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Training Ground</h1>
-                        <p class="#13131899">The Burnsville Training Center is located across the parking from the Burnsville.</p>
+                        <p class="text-[#13131899]">The Burnsville Training Center is located across the parking from the Burnsville.</p>
                         </div>
                        </div>
                    </div>
+            </div>
+        </section>
+        <section class="container mx-auto mt-24">
+            <div class="text-center space-y-6">
+                <h1 class="text-4xl font-extrabold">Program Sections</h1>
+                <p class="text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-6 gap-4 mt-20">
+
+                <div class="lg:h-80 h-full m-3 lg:col-span-1 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/2.png)] bg-center bg-cover rounded-2xl">
+                   <div class="lg:pl-10 p-12 lg:pt-20">
+                    <h1 class="lg:text-3xl text-2xl text-[#fff] font-extrabold lg:pb-4 pb-3">Junior Program</h1>
+                    <p class="text-[#fff] lg:font-medium lg:pb-8 lg:w-[495px] pb-4">Welcome to Hockey Canada Programs. Here you will find alternatives on how you can get involved in hockey.We want all Canadians involved in the game.</p>
+                    <button class="btn border-none bg-[#FF4240] text-white font-bold">Register Now!</button>
+                   </div>
                    
+                </div>
+                <div class="lg:h-80 h-full m-3 lg:col-span-1 space-x-2 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/3.png)] bg-center bg-cover rounded-2xl">
+                    <div class="lg:pl-10 p-8 lg:pt-20">
+                        <h1 class="lg:text-3xl text-2xl text-[#fff] font-extrabold pb-4">Teenager Program</h1>
+                        <p class="text-[#fff]  font-medium lg:pb-8 lg:w-[495px] pb-4">Welcome to Hockey Canada Programs. Here you will find alternatives on how you can get involved in hockey.We want all Canadians involved in the game.</p>
+                        <button class="btn border-none bg-[#FF4240] text-white font-bold">Register Now!</button>
+                       </div>
+                </div>
+                <div class="lg:h-[490px] h-full m-3 lg:col-span-2 space-x-2 bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/4.png)] bg-center bg-cover rounded-2xl">
+                    <div class="lg:pl-10 p-8 lg:pt-[225px]">
+                        <h1 class="lg:text-3xl text-2xl text-[#fff] font-extrabold pb-4">Professional Program</h1>
+                        <p class="text-[#fff] font-medium lg:pb-8 lg:w-[495px] pb-4">Welcome to Hockey Canada Programs. Here you will find alternatives on how you can get involved in hockey.We want all Canadians involved in the game.</p>
+                        <button class="btn border-none bg-[#FF4240] text-white font-bold">Register Now!</button>
+                       </div>
+                </div>
             </div>
         </section>
     </main>
