--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                        </div>
                    </div>
             </div>
+            <!-- program section start -->
         </section>
         <section class="container mx-auto mt-24">
             <div class="text-center space-y-6">
@@ -166,6 +167,221 @@
                        </div>
                 </div>
             </div>
+        </section>
+        <!-- products section start -->
+        <section class="container mx-auto mt-40">
+            <div class="text-center">
+                <h1 class="text-4xl font-extrabold text-[#131318] mb-6">Our New Products</h1>
+            <p class="font-medium text-[#13131899] mb-20">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+           <div class="grid lg:grid-cols-2 gap-4">
+            
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/5.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/6.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/7.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">Cap For Hockeys</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/8.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/9.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card lg:w-[750px] lg:h-[200px] shadow-2xl p-3 bg-[#fff]">
+                <div class="lg:flex gap-5 items-center">
+                    <div>
+                        <img class="lg:w-44 lg:h-44 w-[400px] h-[300px] object-fit-cover" src="Images/10.png" alt="">
+                    </div>
+                    <div>
+                        <div class="flex gap-6 items-center lg:mt-1 mt-6 mb-3">
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame.png" alt="">
+                                <h5 class="font-medium text-[#13131899]">5.0</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img class="w-6 h-6" src="Images/Frame (1).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">20</h5>
+                            </div>
+                            <div class="flex lg:gap-1 gap-2">
+                                <img  class="w-6 h-6" src="Images/Frame (2).png" alt="">
+                                <h5 class="font-medium text-[#13131899]">200</h5>
+                            </div>
+                        </div>
+                        <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
+                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <div class="lg:flex gap-4 items-center mt-3 ">
+                            <div>
+                                <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <img class="w-6 h-6" src="Images/Frame (2).svg" alt="">
+                                <h4 class="font-medium text-[#13131899] pb-1">Delivery Fee : Free</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+           </div>
         </section>
     </main>
     <footer>
