--- a/index.html
+++ b/index.html
@@ -383,6 +383,69 @@
            
            </div>
         </section>
+        <!-- get and touch section start -->
+        <section class="container mx-auto mt-32">
+            <div class="text-center">
+                <h1 class="mb-6 text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
+                <p class="font-medium text-[#13131899] mb-20">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+                <div class="">
+                    <div class="bg-[#bced6d1a] lg:w-96 lg:h-52 mb-6 rounded-2xl mx-3 px-8 py-10">
+                        <img class="pb-6" src="Images/Group 1171275317.png" alt="">
+                        <p class="pb-2 text-[#13131866]">Phone Number : </p>
+                        <h4 class="text-[#131318] text-xl font-extrabold">(+62) 123-321-543</h4>
+                    </div>
+                    <div class="bg-[#fddd5f1a] lg:w-96 lg:h-52 mb-6 rounded-2xl mx-3 px-8 py-10">
+                        <img class="pb-6" src="Images/Group 1171275318.png" alt="">
+                        <p class="pb-2 text-[#13131866]">Email : </p>
+                        <h4 class="text-[#131318] text-xl font-extrabold">hockeys@support.com</h4>
+                    </div>
+                    <div class="bg-[#629cf31a] lg:w-96 lg:h-52 mb-6 rounded-2xl mx-3 px-8 py-10">
+                        <img  class="pb-6" src="Images/Group 1171275321.png" alt="">
+                        <p class="pb-2 text-[#13131866]">Location : </p>
+                        <h4 class="text-[#131318] text-xl font-extrabold">152/1 Mohakhali Wireless Gate</h4>
+                    </div>
+                </div>
+                <div class="col-span-2">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 mx-3 lg:gap-6">
+                        <div>
+                            <label class="text-xl font-bold text-[#131318]" for="">Your Name</label>
+                            <input type="text" placeholder="Enter your full name" class="mt-3 input input-bordered w-full rounded-xl mb-3" />
+                        </div>
+                        <div>
+                            <label class="text-xl font-bold text-[#131318]" for="">Your Email</label>
+                            <input type="text" placeholder="Enter your email" class="mt-3 input input-bordered w-full rounded-xl mb-3" />
+                        </div>
+                        <div>
+                            <label class="text-xl font-bold text-[#131318]" for="">Subject</label>
+                            <input type="text" placeholder="Enter your subject" class="mt-3 input input-bordered w-full rounded-xl mb-3" />
+                        </div>
+                        <div>
+                            <label class="text-xl font-bold text-[#131318]" for="">Phone Number</label>
+                            <input type="text" placeholder="Enter your phone number" class="mt-3 input input-bordered w-full rounded-xl" />
+                        </div>
+                       
+                    </div>
+                    <div class=" lg:col-span-2 mx-3 mt-4">
+                        <label class="text-xl font-bold text-[#131318]" for="">Message</label>
+                        <textarea class="mt-2 w-full textarea textarea-bordered rounded-xl" placeholder="Write your message" rows="12"></textarea>
+                    </div>
+                    <div class="mx-3">
+                        <button class="btn w-full mt-5 bg-[#FF4240] text-[#fff]">Send Message</button>
+                    </div>
+                </div>
+            </div>
+            <div class=" bg-[#1313184d] text-center mt-12 py-8 rounded-xl mx-3">
+                <h1 class="text-2xl text-[#131318] font-extrabold">Social Media</h1>
+                <div class="mt-3 flex gap-6 justify-center items-center text-2xl">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
