added a footer section

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
         <section class="container mx-auto mt-16 lg:mt-32">
             <div class="text-center space-y-4 lg:space-y-6">
                 <h1 class="text-[#131318] text-2xl lg:text-4xl font-extrabold">Professional Hockeys Club</h1>
-                <p class="text-[#13131899] font-medium">Club hockey is a beloved sport that has grown in popularity among college students over the years.</p>
+                <p class="text-[#13131899] font-medium lg:w-[600px] lg:mx-auto">Club hockey is a beloved sport that has grown in popularity among college students over the years.</p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-4 mt-10">
                 <div class="text-center mt-12">
                     <div>
-                        <div class="radial-progress text-[#FF4240] rotate-180" style="--value:87; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">87%</span></div>
+                        <div class="radial-progress text-[#FF4240] rotate-90" style="--value:87; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-90">87%</span></div>
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Prayer Facility</h1>
@@ -108,7 +108,7 @@
                        </div>
                        <div class="text-center mt-12">
                         <div>
-                            <div class="radial-progress text-[#49D293] rotate-180" style="--value:95; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">95%</span></div>
+                            <div class="radial-progress text-[#49D293] rotate-90" style="--value:95; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-90">95%</span></div>
                             </div>
                             <div>
                                 <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Experienced Coach</h1>
@@ -117,7 +117,7 @@
                            </div>
                            <div class="text-center mt-12">
                             <div>
-                                <div class="radial-progress text-[#FFB546] rotate-180" style="--value:90; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">90%</span></div>
+                                <div class="radial-progress text-[#FFB546] rotate-90" style="--value:90; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-90">90%</span></div>
                                 </div>
                                 <div>
                                     <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Senior Player</h1>
@@ -126,7 +126,7 @@
                                </div>
                    <div class="text-center mt-12">
                     <div>
-                        <div class="radial-progress text-[#4C8DF1] rotate-180 " style="--value:80; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-180">80%</span></div>
+                        <div class="radial-progress text-[#4C8DF1] rotate-90 " style="--value:80; --size:10rem; --thickness: 1rem;" role="progressbar"><span class="text-black text-4xl font-extrabold -rotate-90">80%</span></div>
                         </div>
                         <div>
                             <h1 class="text-xl font-semibold text-[#131318] mb-3 mt-5">Training Ground</h1>
@@ -140,7 +140,8 @@
         <section class="container mx-auto mt-24">
             <div class="text-center space-y-6">
                 <h1 class="text-4xl font-extrabold">Program Sections</h1>
-                <p class="text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class="text-[#13131899] lg:w-[600px] lg:mx-auto">
+                    Welcome to Hockey Canada Programs. Here you will find alternatives on how you can get involved in hockey. </p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-2 lg:gap-6 gap-4 mt-20">
 
@@ -172,7 +173,7 @@
         <section class="container mx-auto mt-40">
             <div class="text-center">
                 <h1 class="text-4xl font-extrabold text-[#131318] mb-6">Our New Products</h1>
-            <p class="font-medium text-[#13131899] mb-20">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto"> hockey player needs Every sportsman has their way to perfecting their craft.You will always need a specialized bag for all your equipment.</p>
             </div>
            <div class="grid lg:grid-cols-2 gap-4">
             
@@ -197,7 +198,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -231,7 +232,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -265,7 +266,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">Cap For Hockeys</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -299,7 +300,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -333,7 +334,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -367,7 +368,7 @@
                             </div>
                         </div>
                         <h1 class="text-xl font-extrabold text-[#131318] mb-3">World Cup Flags Football</h1>
-                        <p class="font-medium text-[#13131899] w-[350px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                        <p class="font-medium text-[#13131899] w-[350px]">You will always need a specialized bag for all your equipment.</p>
                         <div class="lg:flex gap-4 items-center mt-3 ">
                             <div>
                                 <h5 class="text-[#FF4240] font-extrabold lg:mb-0 mb-3">Price - $22.00</h5>
@@ -387,7 +388,7 @@
         <section class="container mx-auto mt-32">
             <div class="text-center">
                 <h1 class="mb-6 text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
-                <p class="font-medium text-[#13131899] mb-20">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+                <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
             </div>
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
                 <div class="">
@@ -447,8 +448,43 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <!-- footer section start -->
+    <footer class="footer p-10 mt-24 bg-[#131318] text-base-content">
+        <div>
+            <h3 class="text-[#FFF] text-3xl font-extrabold">Get In Touch</h3>
+            <p class="lg:w-[340px] text-[#ffffff99] font-medium">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
+            <div class="flex justify-center items-center gap-3">
+                <i class="fa-regular fa-envelope text-[#FF4240]"></i>
+                <p class="text-[#ffffffcc] font-medium">hockeys@support.com</p>
+            </div>
+            <div class="flex justify-center items-center gap-3">
+                <i class="fa-solid fa-phone text-[#FF4240]"></i>
+                <p class="text-[#ffffffcc] font-medium">(+62) 123-321-543</p>
+            </div>
+        </div>
+            <nav>
+                <header class="footer-title text-[#FFF] text-[18px] font-bold">Company</header> 
+                <a class="link link-hover text-[#ffffff99]">About us</a>
+                <a class="link link-hover text-[#ffffff99]">Leadership</a>
+                <a class="link link-hover text-[#ffffff99]">Careers</a>
+                <a class="link link-hover text-[#ffffff99]">News & Article</a>
+                <a class="link link-hover text-[#ffffff99]">Legal Notice</a>
+              </nav>
+            <nav>
+                <header class="footer-title text-[#FFF] text-[18px] font-bold">Support</header> 
+                <a class="link link-hover text-[#ffffff99]">Help Center</a>
+                <a class="link link-hover text-[#ffffff99]">FAQ</a>
+                <a class="link link-hover text-[#ffffff99]">Ticket Support</a>
+                <a class="link link-hover text-[#ffffff99]">Contact Us</a>
+                </nav>
+            <nav>
+                <header class="footer-title text-[#FFF] text-[18px] font-bold">Services</header> 
+                <a class="link link-hover text-[#ffffff99]">Academy</a>
+                <a class="link link-hover text-[#ffffff99]">Group Lesson</a>
+                <a class="link link-hover text-[#ffffff99]">Private Lesson</a>
+                <a class="link link-hover text-[#ffffff99]">Hockeys for kids</a>
+                <a class="link link-hover text-[#ffffff99]">Hockeys for Adult</a>
+              </nav>
+      </footer>
 </body>
 </html>
