completed a faq section

--- a/index.html
+++ b/index.html
@@ -384,8 +384,76 @@
            
            </div>
         </section>
-        <!-- get and touch section start -->
+        <!-- FAQ section start -->
         <section class="container mx-auto mt-32">
+            <div class="text-center">
+                <h3 class="text-[#131318] text-4xl font-extrabold mb-6">Clients Question</h3>
+                <p class="text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+          <div class="grid lg:grid-cols-2">
+            <div>
+                <img class="lg:w-[90%] lg:h-[80%] mb-3 p-3" src="Images/11.png" alt="">
+            </div>
+            <div class="px-3">
+                <div class="collapse collapse-plus bg-base-200 mb-2">
+                    <input type="radio" name="my-accordion-3" checked="checked" /> 
+                    <div class="collapse-title text-xl font-medium">
+                        <h3 class="text-[#131318] text-[20px] font-bold">Our Equipment</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                      <p class="text-[#13131899]">Hockey Direct is your go-to online hockey shop for an unrivalled choice of quality, affordable hockey sticks, hockey shoes and hockey equipment.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200 mb-2">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                        <h3 class="text-[#131318] text-[20px] font-bold">Hockey Training</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                        <p class="text-[#13131899]">When training for hockey at home, it is important to practice exercises that don’t require a ton of equipment.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200 mb-2 mt-3">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                      <h3 class="text-[#131318] text-[20px] font-bold">Private Lessons</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                        <p class="text-[#13131899]">Coach Moskonas offers private hockey coaching lessons at all skill levels, that are customized based on skater development needs.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200 mb-2">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                        <h3 class="text-[#131318] text-[20px] font-bold">Ski Touring</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                        <p class="text-[#13131899]">Find your perfect Val d’Isere private ski lessons. Book directly or with help from our local experts.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200 mb-2">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                        <h3 class="text-[#131318] text-[20px] font-bold">Booking</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                        <p class="text-[#13131899]">The Olympic Oval is home to an Olympic-sized hockey rink available for bookings to the public, user groups, and sporting organizations.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200 mb-2">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                        <h3 class="text-[#131318] text-[20px] font-bold">Pricings</h3>
+                    </div>
+                    <div class="collapse-content"> 
+                        <p class="text-[#13131899]">You can choose field hockey prices at Alibaba.com that are easy to install, maintain, repair, and transport.</p>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </section>
+        <!-- get and touch section start -->
+        <section class="container mx-auto mt-10">
             <div class="text-center">
                 <h1 class="mb-6 text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
                 <p class="font-medium text-[#13131899] mb-20 lg:w-[600px] lg:mx-auto">A player can bat the puck down with a hand, but cannot close a hand on the puck. The puck should land on the same player’s stick.</p>
